    - update debian/rules
  * Drop system nspr/nss
    - update debian/rules
  * Update requirement for system sqlite3 to >= 3.6.0
    - update debian/rules
  * Add libasound2-dev to Build-Depends for the new HTML5 <video> tag
    - update debian/control
  * Drop dom-inspector, venkman and legacy firefox-{,trunk,granparadiso}
    packages
    - update debian/control
  * Update diverged patches:
    - update debian/patches/nspr_flags_by_pkg_config_hack.patch
    - update debian/patches/bzXXX_reload_new_plugins.patch
    - update debian/patches/firefox-fsh
    - update debian/patches/lp185622_system_path_default_browser.patch
    - update debian/patches/browser_branding.patch
  * Drop patches applied upstream
    - drop debian/patches/bz412610_att335369_realpath_overflow.patch
    - drop debian/patches/bz436133_att322801.patch
    - drop debian/patches/bz421977_att334578.patch
    - update debian/patches/series

 -- Fabien Tassin <fta@ubuntu.com>  Tue, 21 Oct 2008 15:57:11 +0200

firefox-3.0 (3.0.3+nobinonly-0ubuntu3) UNRELEASED; urgency=low

  * Fix missing comma in Build-Depends breaking older dpkg-dev
    - update debian/control

 -- Fabien Tassin <fta@ubuntu.com>  Sat, 18 Oct 2008 02:47:31 +0200

firefox-3.0 (3.0.3+nobinonly-0ubuntu2) intrepid; urgency=low

  * fix LP: #282875: about:rights does not display; the latest update
    of the know your right page contained illegal xml.
    - update debian/patches/lp269656_know_your_rights.patch

 -- Alexander Sack <asac@ubuntu.com>  Mon, 20 Oct 2008 17:37:05 +0200

firefox-3.0 (3.0.3+nobinonly-0ubuntu1) intrepid; urgency=low

  [ Steve Langasek <steve.langasek@ubuntu.com> ]
  * Fix the wrapper script to handle all possible invocations.
    LP: #275410.

  [ Fabien Tassin <fta@ubuntu.com> ]
  * Remove some hardcoded 3.0 to make the merge in the 3.1 branch smoother
    - update debian/rules
    - update debian/firefox.sh.in
  * Fix abrowser symlink in libdir which must be versioned unless control