@@ -23,6 +23,7 @@ firefox-3.1 (3.1~b2~hg20081021r20722+nobinonly-0ubuntu1) UNRELEASED; urgency=low
     packages
     - update debian/control
   * Update diverged patches:
+    - update debian/patches/lp269656_know_your_rights.patch
     - update debian/patches/nspr_flags_by_pkg_config_hack.patch
     - update debian/patches/bzXXX_reload_new_plugins.patch
     - update debian/patches/firefox-fsh
